# cargo-careful

./: Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: ci.yml  deploy.yml  release.yml
src/: main.rs  sysroot.rs  util.rs
test/: Cargo.toml  ci.sh
test/src/: lib.rs  main.rs
test/test-main_thread_checker/: Cargo.toml
test/test-main_thread_checker/src/: main.rs
test/test-no_std/: Cargo.toml
test/tests/: tests.rs
