[package]
name = "cargo-careful"
authors = ["Ralf Jung"]
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RalfJung/cargo-careful"
description = "Execute Rust code carefully, with extra checking along the way"

[dependencies]
directories = "4"
rustc_version = "0.4"
rustc-build-sysroot = "0.3"
