[package]
name = "cargo-careful"
authors = ["Ralf Jung"]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RalfJung/cargo-careful"
description = "Execute Rust code carefully, with extra checking along the way"

[dependencies]
anyhow = "1.0.65"
directories = "4"
rustc_version = "0.4"
rustc-build-sysroot = "0.4.0"
serde_json = "1.0.87"
